Refactor styles and components: replace global CSS with a reset stylesheet, update icon imports, and create LucideSettings component

--- a/src/app/page.scss
+++ b/src/app/page.scss
@@ -1,6 +1,5 @@
 .samplePage_1_51 {
   display: flex;
-  width: 333px;
   height: 438px;
   padding: 61px 10px 10px 10px;
   flex-direction: column;
@@ -21,20 +20,22 @@
   opacity: 1;
 }
 
-.lucideCopyPlus_i_1_78_1_67 {
+.lucideSettings_i_1_78_1_67 {
   display: flex;
   width: 16px;
   height: 16px;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 10px;
   opacity: 1;
 }
 
-.lucideCopyPlus_i_1_78_1_67 {
+.lucideSettings_i_1_78_1_67 {
   display: flex;
   width: 16px;
   height: 16px;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 10px;
@@ -177,20 +178,22 @@
   opacity: 1;
 }
 
-.lucideCopyPlus_i_1_78_1_67 {
+.lucideSettings_i_1_78_1_67 {
   display: flex;
   width: 16px;
   height: 16px;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 10px;
   opacity: 1;
 }
 
-.lucideCopyPlus_i_1_78_1_67 {
+.lucideSettings_i_1_78_1_67 {
   display: flex;
   width: 16px;
   height: 16px;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 10px;
